--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -14,13 +14,13 @@
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
-        <input type="email" name="email" autofocus />
+        <input type="email" name="email" id="email-input" autofocus />
       </label>
       <label>
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea name="message" rows="8" id="text-input"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button type="submit" id="button-submit">Submit</button>
     </form>
 
     <script src="js/03-feedback.js" type="module"></script>
